# template-fastapi

./: .env  .env.example  .gitignore  .gitpod.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.docker/: docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker.yml
app/: .dockerignore  Dockerfile  pyproject.toml
app/src/app/: interface.py
app/src/app/api/: __init__.py  interface.py
app/src/app/api/endpoints/: auth.py  users.py
app/src/app/core/: __init__.py  session.py  settings.py
app/src/app/data/models/: __init__.py
src/app/: __init__.py  interface.py
src/synapse/: __init__.py  __main__.py  interface.py  telegram.py
src/synapse/api/: __init__.py  index.py
src/synapse/api/endpoints/: oai.py  openai.py  users.py
src/synapse/api/routes/: auth.py  oai.py  payments.py  users.py
src/synapse/core/: session.py  settings.py
src/synapse/data/: __init__.py  messages.py
src/synapse/data/models/: tokens.py  users.py
src/synapse/data/schemas/: users.py
