[tool.poetry]
authors = ["FL03 <j03mccain@icloud.com>"]
description = ""
license = "Apache-2.0"
name = "synapse"
packages = [{include = "synapse", from = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
bcrypt = "4"
cryptography = "39"
fastapi = {extras = ["all"], version = "0.95"}
openai = "0.27"
passlib = "1.7"
python = ">=3.8,<3.12"
python-dotenv = "0.21"
python-jose = "3.3"
strawberry-graphql = {extras = ["fastapi"], version = "0.151"}
tortoise-orm = { extras = ["asyncpg"], version = "0.19" }

[tool.poetry.dev-dependencies]
black = "22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
