[tool.poetry]
authors = ["FL03 <j03mccain@icloud.com>"]
description = ""
license = "Apache-2.0"
name = "synapse"
packages = [{include = "synapse", from = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
bcrypt = "4.0.1"
cryptography = "40.0.2"
fastapi = { extras = ["all"], version = "0.95.1" }
openai = "0.27.6"
passlib = "1.7"
python = ">=3.8,<3.12"
python-dotenv = "1.0.0"
python-jose = "3.3"
strawberry-graphql = {extras = ["fastapi"], version = "0.171.3"}
tortoise-orm = { extras = ["asyncpg"], version = "0.19" }

[tool.poetry.dev-dependencies]
black = "23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
