[tool.poetry]
authors = ["FL03 <j03mccain@icloud.com>"]
description = ""
license = "Apache-2.0"
name = "synapse"
packages = [{include = "synapse", from = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
bcrypt = "4.0.1"
cryptography = "41.0.3"
fastapi = { extras = ["all"], version = "0.101.1" }
openai = "0.27.7"
passlib = "1.7.4"
python = ">=3.8,<3.12"
python-dotenv = "1.0.0"
python-jose = "3.3"
strawberry-graphql = {extras = ["fastapi"], version = "0.211.0"}
tortoise-orm = { extras = ["asyncpg"], version = "0.19.3" }

[tool.poetry.dev-dependencies]
black = "23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
